Some more verbosity

--- a/xbps-packages/Makefile
+++ b/xbps-packages/Makefile
@@ -1,5 +1,6 @@
+LOCALREPO=$(shell pwd)/xbps-packages/hostdir/binpkgs/${HOME}/prg/xbps-packages/
 XBPS_PACKAGES=${HOME}/prg/xbps-packages
 
 all:
 	cd srcpkgs/radare2-git ; linux32 \
-	../../xbps-src -a i686 -r $(XBPS_PACKAGES) -j10 pkg
+	../../xbps-src -a i686 -r $(LOCALREPO) -j10 pkg
