More fixes to make this thing work again

--- a/xbps-packages/Makefile
+++ b/xbps-packages/Makefile
@@ -1,6 +1,7 @@
-LOCALREPO=$(shell pwd)/xbps-packages/hostdir/binpkgs/${HOME}/prg/xbps-packages/
-XBPS_PACKAGES=${HOME}/prg/xbps-packages
+#LOCALREPO=$(shell pwd)/hostdir/binpkgs/
+#${HOME}/prg/xbps-packages/
+#XBPS_PACKAGES=${HOME}/prg/xbps-packages
 
 all:
-	cd srcpkgs/radare2-git ; linux32 \
-	../../xbps-src -a i686 -r $(LOCALREPO) -j10 pkg
+	#linux32 ./xbps-src -a i686 -r $(LOCALREPO) -j10 pkg radare2-git
+	linux32 ./xbps-src -a i686 -j10 pkg radare2-git
